--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
           </div>
         </div>
 
-        <div class="humburguer-menu">
+        <div class="hamburguer-menu">
           <a class="menu">
-            <div class="humburguer-stroke"></div>
-            <div class="humburguer-stroke"></div>
-            <div class="humburguer-stroke"></div>
+            <div class="hamburguer-stroke"></div>
+            <div class="hamburguer-stroke"></div>
+            <div class="hamburguer-stroke"></div>
           </a>
         </div>
       </div>
