Cleaning up files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="tool">
             <a href="/#" data-tool="wwwc">
               <svg class="tool-img">
-                <use href="/imgs/icons.svg#icon-status-complete"></use>
+                <use href="./imgs/icons.svg#icon-status-complete"></use>
               </svg>
               W/L
             </a>
@@ -43,7 +43,7 @@
           <div class="tool">
             <a href="/#" data-tool="length">
               <svg class="tool-img">
-                <use href="/imgs/icons.svg#icon-tools-measure-temp"></use>
+                <use href="./imgs/icons.svg#icon-tools-measure-temp"></use>
               </svg>
               Length
             </a>
@@ -51,7 +51,7 @@
           <div class="tool">
             <a href="/#" data-tool="pan">
               <svg class="tool-img">
-                <use href="/imgs/icons.svg#icon-tools-pan"></use>
+                <use href="./imgs/icons.svg#icon-tools-pan"></use>
               </svg>
               Pan
             </a>
@@ -59,7 +59,7 @@
           <div class="tool">
             <a href="/#" data-tool="zoom">
               <svg class="tool-img">
-                <use href="/imgs/icons.svg#icon-tools-zoom"></use>
+                <use href="./imgs/icons.svg#icon-tools-zoom"></use>
               </svg>
               Zoom
             </a>
@@ -67,7 +67,7 @@
           <div class="tool">
             <a href="/#" data-command="clearAll">
               <svg>
-                <use href="/imgs/icons.svg#icon-ui-close"></use>
+                <use href="./imgs/icons.svg#icon-ui-close"></use>
               </svg>
               Clear
             </a>
@@ -116,13 +116,13 @@
     </div>
 
     <!-- Dependencies -->
-    <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="../node_modules/hammerjs/hammer.min.js"></script>
-    <script type="text/javascript" src="../node_modules/cornerstone-math/dist/cornerstoneMath.min.js"></script>
-    <script type="text/javascript" src="../node_modules/cornerstone-core/dist/cornerstone.min.js"></script>
-    <script type="text/javascript" src="../node_modules/cornerstone-tools/dist/cornerstoneTools.min.js"></script>
-    <script type="text/javascript" src="../node_modules/dicom-parser/dist/dicomParser.min.js"></script>
-    <script type="text/javascript" src="../node_modules/cornerstone-wado-image-loader/dist/cornerstoneWADOImageLoader.min.js"></script>
+    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="./node_modules/hammerjs/hammer.min.js"></script>
+    <script type="text/javascript" src="./node_modules/cornerstone-math/dist/cornerstoneMath.min.js"></script>
+    <script type="text/javascript" src="./node_modules/cornerstone-core/dist/cornerstone.min.js"></script>
+    <script type="text/javascript" src="./node_modules/cornerstone-tools/dist/cornerstoneTools.min.js"></script>
+    <script type="text/javascript" src="./node_modules/dicom-parser/dist/dicomParser.min.js"></script>
+    <script type="text/javascript" src="./node_modules/cornerstone-wado-image-loader/dist/cornerstoneWADOImageLoader.min.js"></script>
 
     <!-- Code -->
     <script type="text/javascript" src="./src/login/login.js"></script>
