Fixin small typos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="tool">
             <a href="/#" data-tool="wwwc">
               <svg class="tool-img">
-                <use href="./imgs/icons.svg#icon-status-complete"></use>
+                <use href="./imgs/icons.svg#icon-tools-levels-group"></use>
               </svg>
               W/L
             </a>
