Fixing window-level's icon alignment

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="viewer-tools">
           <div class="tool">
             <a href="/#" data-tool="wwwc">
-              <svg class="tool-img">
+              <svg class="tool-img window-level">
                 <use href="./imgs/icons.svg#icon-tools-levels-group"></use>
               </svg>
               W/L
