--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="tool">
             <a href="/#" data-tool="wwwc">
               <svg class="tool-img">
-                <use href="/imgs/icons.svg#icon-status-complete"></use>
+                <use xlink:href="/imgs/icons.svg#icon-status-complete" href="/imgs/icons.svg#icon-status-complete"></use>
               </svg>
               W/L
             </a>
@@ -39,7 +39,7 @@
           <div class="tool">
             <a href="/#" data-tool="length">
               <svg class="tool-img">
-                <use href="/imgs/icons.svg#icon-tools-measure-temp"></use>
+                <use xlink:href="/imgs/icons.svg#icon-tools-measure-temp" href="/imgs/icons.svg#icon-tools-measure-temp"></use>
               </svg>
               Length
             </a>
@@ -47,7 +47,7 @@
           <div class="tool">
             <a href="/#" data-tool="pan">
               <svg class="tool-img">
-                <use href="/imgs/icons.svg#icon-tools-pan"></use>
+                <use xlink:href="/imgs/icons.svg#icon-tools-pan" href="/imgs/icons.svg#icon-tools-pan"></use>
               </svg>
               Pan
             </a>
@@ -55,7 +55,7 @@
           <div class="tool">
             <a href="/#" data-tool="zoom">
               <svg class="tool-img">
-                <use href="/imgs/icons.svg#icon-tools-zoom"></use>
+                <use xlink:href="/imgs/icons.svg#icon-tools-zoom" href="/imgs/icons.svg#icon-tools-zoom"></use>
               </svg>
               Zoom
             </a>
@@ -63,7 +63,7 @@
           <div class="tool">
             <a href="/#" data-command="save">
               <svg>
-                <use href="./imgs/icons.svg#icon-status-complete"></use>
+                <use xlink:href="./imgs/icons.svg#icon-status-complete" href="./imgs/icons.svg#icon-status-complete"></use>
               </svg>
               Save
             </a>
@@ -71,7 +71,7 @@
           <div class="tool">
             <a href="/#" data-command="clearAll">
               <svg>
-                <use href="/imgs/icons.svg#icon-ui-close"></use>
+                <use xlink:href="/imgs/icons.svg#icon-ui-close" href="/imgs/icons.svg#icon-ui-close"></use>
               </svg>
               Clear
             </a>
