Fixing missing icons on safari

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="tool">
             <a href="/#" data-tool="wwwc">
               <svg class="tool-img window-level">
-                <use href="./imgs/icons.svg#icon-tools-levels-group"></use>
+                <use xlink:href="./imgs/icons.svg#icon-tools-levels-group" href="./imgs/icons.svg#icon-tools-levels-group"></use>
               </svg>
               W/L
             </a>
@@ -43,7 +43,7 @@
           <div class="tool">
             <a href="/#" data-tool="length">
               <svg class="tool-img">
-                <use href="./imgs/icons.svg#icon-tools-measure-temp"></use>
+                <use xlink:href="./imgs/icons.svg#icon-tools-measure-temp" href="./imgs/icons.svg#icon-tools-measure-temp"></use>
               </svg>
               Length
             </a>
@@ -51,7 +51,7 @@
           <div class="tool">
             <a href="/#" data-tool="pan">
               <svg class="tool-img">
-                <use href="./imgs/icons.svg#icon-tools-pan"></use>
+                <use xlink:href="./imgs/icons.svg#icon-tools-pan" href="./imgs/icons.svg#icon-tools-pan"></use>
               </svg>
               Pan
             </a>
@@ -59,7 +59,7 @@
           <div class="tool">
             <a href="/#" data-tool="zoom">
               <svg class="tool-img">
-                <use href="./imgs/icons.svg#icon-tools-zoom"></use>
+                <use xlink:href="./imgs/icons.svg#icon-tools-zoom" href="./imgs/icons.svg#icon-tools-zoom"></use>
               </svg>
               Zoom
             </a>
@@ -67,7 +67,7 @@
           <div class="tool">
             <a href="/#" data-command="save">
               <svg>
-                <use href="./imgs/icons.svg#icon-status-complete"></use>
+                <use xlink:href="./imgs/icons.svg#icon-status-complete" href="./imgs/icons.svg#icon-status-complete"></use>
               </svg>
               Save
             </a>
@@ -75,7 +75,7 @@
           <div class="tool">
             <a href="/#" data-command="clearAll">
               <svg>
-                <use href="./imgs/icons.svg#icon-ui-close"></use>
+                <use xlink:href="/imgs/icons.svg#icon-ui-close" href="./imgs/icons.svg#icon-ui-close"></use>
               </svg>
               Clear
             </a>
